// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Cells/ArticlesCell Empty 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div>
        Empty
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      Empty
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots Cells/ArticlesCell Failure 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div
        style="color: red;"
      >
        Error: 
        Oh no
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="color: red;"
    >
      Error: 
      Oh no
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots Cells/ArticlesCell Loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div>
        Loading...
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      Loading...
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots Cells/ArticlesCell Success 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div
        class="space-y-10"
      >
        <article>
          <header>
            <h2
              class="text-xl text-blue-700 font-semibold"
            >
              <a
                href="/article/1"
              >
                First Post
              </a>
            </h2>
          </header>
          <div
            class="mt-2 text-gray-900 font-light"
          >
            Neutra tacos hot chicken prism raw denim, put a bird on it enamel pin post-ironic vape cred DIY. Street art next level umami squid. Hammock hexagon glossier 8-bit banjo. Neutra la croix mixtape echo park four loko semiotics kitsch forage chambray. Semiotics salvia selfies jianbing hella shaman. Letterpress helvetica vaporware cronut, shaman butcher YOLO poke fixie hoodie gentrify woke heirloom.
          </div>
          <div
            class="mt-12"
          >
            <div
              class=""
            >
              <h3
                class="font-light text-lg text-gray-600"
              >
                Leave a Comment
              </h3>
              <form
                class="mt-4 w-full"
              >
                <label
                  class="block text-xs font-semibold text-gray-500 uppercase"
                  for="name"
                >
                  Name
                </label>
                <input
                  class="block w-full p-1 border rounded text-sm "
                  data-testid="name"
                  id="name"
                  name="name"
                  type="text"
                />
                <label
                  class="block mt-4 text-xs font-semibold text-gray-500 uppercase"
                  for="body"
                >
                  Comment
                </label>
                <textarea
                  class="block w-full p-1 border rounded h-24 text-sm"
                  data-testid="body"
                  id="body"
                  name="body"
                />
                <button
                  class="block mt-4 bg-blue-500 text-white text-xs font-semibold uppercase tracking-wide rounded px-3 py-2 disabled:opacity-50"
                  data-testid="submit"
                  type="submit"
                >
                  Submit
                </button>
              </form>
            </div>
            <div
              class="mt-12"
            >
              <div>
                Loading...
              </div>
            </div>
          </div>
          <div>
            Posted at: 
            2020-01-01T12:34:56Z
          </div>
        </article>
        <article>
          <header>
            <h2
              class="text-xl text-blue-700 font-semibold"
            >
              <a
                href="/article/2"
              >
                Second Post
              </a>
            </h2>
          </header>
          <div
            class="mt-2 text-gray-900 font-light"
          >
            Master cleanse gentrify irony put a bird on it hexagon enamel pin. Pop-up man braid artisan pug tilde synth lo-fi. Ethical tofu portland keytar waistcoat. Pabst authentic hammock chillwave twee trust fund. Lyft humblebrag ramps irony unicorn.
          </div>
          <div
            class="mt-12"
          >
            <div
              class=""
            >
              <h3
                class="font-light text-lg text-gray-600"
              >
                Leave a Comment
              </h3>
              <form
                class="mt-4 w-full"
              >
                <label
                  class="block text-xs font-semibold text-gray-500 uppercase"
                  for="name"
                >
                  Name
                </label>
                <input
                  class="block w-full p-1 border rounded text-sm "
                  data-testid="name"
                  id="name"
                  name="name"
                  type="text"
                />
                <label
                  class="block mt-4 text-xs font-semibold text-gray-500 uppercase"
                  for="body"
                >
                  Comment
                </label>
                <textarea
                  class="block w-full p-1 border rounded h-24 text-sm"
                  data-testid="body"
                  id="body"
                  name="body"
                />
                <button
                  class="block mt-4 bg-blue-500 text-white text-xs font-semibold uppercase tracking-wide rounded px-3 py-2 disabled:opacity-50"
                  data-testid="submit"
                  type="submit"
                >
                  Submit
                </button>
              </form>
            </div>
            <div
              class="mt-12"
            >
              <div>
                Loading...
              </div>
            </div>
          </div>
          <div>
            Posted at: 
            2020-01-01T12:34:56Z
          </div>
        </article>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="space-y-10"
    >
      <article>
        <header>
          <h2
            class="text-xl text-blue-700 font-semibold"
          >
            <a
              href="/article/1"
            >
              First Post
            </a>
          </h2>
        </header>
        <div
          class="mt-2 text-gray-900 font-light"
        >
          Neutra tacos hot chicken prism raw denim, put a bird on it enamel pin post-ironic vape cred DIY. Street art next level umami squid. Hammock hexagon glossier 8-bit banjo. Neutra la croix mixtape echo park four loko semiotics kitsch forage chambray. Semiotics salvia selfies jianbing hella shaman. Letterpress helvetica vaporware cronut, shaman butcher YOLO poke fixie hoodie gentrify woke heirloom.
        </div>
        <div
          class="mt-12"
        >
          <div
            class=""
          >
            <h3
              class="font-light text-lg text-gray-600"
            >
              Leave a Comment
            </h3>
            <form
              class="mt-4 w-full"
            >
              <label
                class="block text-xs font-semibold text-gray-500 uppercase"
                for="name"
              >
                Name
              </label>
              <input
                class="block w-full p-1 border rounded text-sm "
                data-testid="name"
                id="name"
                name="name"
                type="text"
              />
              <label
                class="block mt-4 text-xs font-semibold text-gray-500 uppercase"
                for="body"
              >
                Comment
              </label>
              <textarea
                class="block w-full p-1 border rounded h-24 text-sm"
                data-testid="body"
                id="body"
                name="body"
              />
              <button
                class="block mt-4 bg-blue-500 text-white text-xs font-semibold uppercase tracking-wide rounded px-3 py-2 disabled:opacity-50"
                data-testid="submit"
                type="submit"
              >
                Submit
              </button>
            </form>
          </div>
          <div
            class="mt-12"
          >
            <div>
              Loading...
            </div>
          </div>
        </div>
        <div>
          Posted at: 
          2020-01-01T12:34:56Z
        </div>
      </article>
      <article>
        <header>
          <h2
            class="text-xl text-blue-700 font-semibold"
          >
            <a
              href="/article/2"
            >
              Second Post
            </a>
          </h2>
        </header>
        <div
          class="mt-2 text-gray-900 font-light"
        >
          Master cleanse gentrify irony put a bird on it hexagon enamel pin. Pop-up man braid artisan pug tilde synth lo-fi. Ethical tofu portland keytar waistcoat. Pabst authentic hammock chillwave twee trust fund. Lyft humblebrag ramps irony unicorn.
        </div>
        <div
          class="mt-12"
        >
          <div
            class=""
          >
            <h3
              class="font-light text-lg text-gray-600"
            >
              Leave a Comment
            </h3>
            <form
              class="mt-4 w-full"
            >
              <label
                class="block text-xs font-semibold text-gray-500 uppercase"
                for="name"
              >
                Name
              </label>
              <input
                class="block w-full p-1 border rounded text-sm "
                data-testid="name"
                id="name"
                name="name"
                type="text"
              />
              <label
                class="block mt-4 text-xs font-semibold text-gray-500 uppercase"
                for="body"
              >
                Comment
              </label>
              <textarea
                class="block w-full p-1 border rounded h-24 text-sm"
                data-testid="body"
                id="body"
                name="body"
              />
              <button
                class="block mt-4 bg-blue-500 text-white text-xs font-semibold uppercase tracking-wide rounded px-3 py-2 disabled:opacity-50"
                data-testid="submit"
                type="submit"
              >
                Submit
              </button>
            </form>
          </div>
          <div
            class="mt-12"
          >
            <div>
              Loading...
            </div>
          </div>
        </div>
        <div>
          Posted at: 
          2020-01-01T12:34:56Z
        </div>
      </article>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
